Add bulk quotes support
